Bug 150506 - Synonyms context menu is gone
Summary: Synonyms context menu is gone
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-19 23:18 UTC by Marcin Segit
Modified: 2022-09-17 05:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
LO 7.3.5 vs LO 7.4 context menu comparison (113.64 KB, image/png)
2022-08-19 23:19 UTC, Marcin Segit
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcin Segit 2022-08-19 23:18:42 UTC
Description:
Synonyms function under right-click context menu is not appearing upon right-click on a word in Writer. At least Polish and English languages form default installation are affected. Tried with a clean 7.4 installation and with an upgrade from 7.3.5.
Synonyms context menu is working fine in LO 7.3.5.
Ctrl+F7 Thesaurus is also working fine.

Steps to Reproduce:
1. Install LO 7.4.
2. Launch Writer.
3. Type a couple of words (should be rather popular, like "kura" in Polish or "house" in English).
4. Right-click on a word.

Actual Results:
Context menu that appears after right-click does not contain "Synonyms" feature.

Expected Results:
There should be "Synonyms" feature on the right-click context menu.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.4.0.3 (x64) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 16; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL
Comment 1 Marcin Segit 2022-08-19 23:19:31 UTC
Created attachment 181892 [details]
LO 7.3.5 vs LO 7.4 context menu comparison
Comment 2 V Stuart Foote 2022-08-20 01:50:54 UTC
confirmed on 7.4.0.3 and also for recent master

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5ac75131556b687a01517ce4520a05bb49c1d840
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

The Tools -> Customize -> Context Menus panel for the 'Text' target does show the Synonyms control (.uno:ThesaurusFromContext) linked to the control. But the context menu for a word selected from a paragraph does not expose the command.

The command can be removed from the target and can be renamed, or reset to default. It just does not appear when a word is selected and context menu is launched.
Comment 3 raal 2022-08-23 14:54:48 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 7309d8babc7484b7797672cfc2e0631e600fde03 is the first bad commit
commit 7309d8babc7484b7797672cfc2e0631e600fde03
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Feb 10 13:13:40 2022 +0100

    source a6eddceda5d376cd73922123a3bb3a5683307c41

https://git.libreoffice.org/core/+/a6eddceda5d376cd73922123a3bb3a5683307c41
Comment 4 Maxim Monastirsky 2022-08-31 14:33:48 UTC
https://gerrit.libreoffice.org/c/core/+/139121
Comment 5 Commit Notification 2022-08-31 19:55:08 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a72861e3be5b89544ae943c0c5cc6d43e8e70a7d

tdf#150506 Execution parameter confused with slot state

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-01 11:10:15 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/3e39f667590355843336edda9b2f8f7676bbc870

tdf#150506 Execution parameter confused with slot state

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Marcin Segit 2022-09-04 17:40:48 UTC
Fix confirmed. Works in both LO 7.4.2 (build from 3-Sep-2022) and LO 7.5.0 (build from 4-Sep-2022).
Comment 8 Commit Notification 2022-09-09 13:40:46 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-1":

https://git.libreoffice.org/core/commit/02293e09b5e1c066c377cf4f0b6aa5c0aa61a581

tdf#150506 Execution parameter confused with slot state

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.