tdf#150506 Execution parameter confused with slot state

Regression of a6eddceda5d376cd73922123a3bb3a5683307c41
("rename some SID to FN_PARAM").

Change-Id: I5bcafdcec16cc91b1b77f7a3affd630a2f6cc556
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139121
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit a72861e3be5b89544ae943c0c5cc6d43e8e70a7d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138992
Reviewed-by: Caolán McNamara <caolanm@redhat.com>